--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <button id="musicToggle">Toggle Music</button>
     <canvas id="gameCanvas"></canvas>
     <script src="game.js"></script>
 </body>
